Add TikTok link for solarianearl (Arthur)

--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Linktree Clone</title>
 </head>
 <body>
     <div class="container">
         <div class="profile-section">
-            <img src="assets/images/logo.png" alt="Profile" class="logo">
+            <img src="assets/images/logo.png" alt="Profile" class="logo" />
             <h1>Your Name</h1>
             <p>Welcome to my Linktree clone</p>
         </div>
         <div class="links-section">
-            <a href="https://linkedin.com" class="link-btn" title="LinkedIn">
-                <img src="assets/images/linkedin.png" alt="LinkedIn" class="icon">
+            <a class="link-btn" href="https://linkedin.com" title="LinkedIn">
+                <img src="assets/images/linkedin.png" alt="LinkedIn" class="icon" />
                 <span>LinkedIn</span>
             </a>
-            <a href="https://github.com" class="link-btn" title="GitHub">
-                <img src="assets/images/github.png" alt="GitHub" class="icon">
+            <a class="link-btn" href="https://github.com" title="GitHub">
+                <img src="assets/images/github.png" alt="GitHub" class="icon" />
                 <span>GitHub</span>
             </a>
-            <a href="https://instagram.com" class="link-btn" title="Instagram">
-                <img src="assets/images/instagram.png" alt="Instagram" class="icon">
+            <a class="link-btn" href="https://instagram.com" title="Instagram">
+                <img src="assets/images/instagram.png" alt="Instagram" class="icon" />
                 <span>Instagram</span>
             </a>
-            <a href="https://facebook.com" class="link-btn" title="Facebook">
-                <img src="assets/images/facebook.png" alt="Facebook" class="icon">
+            <a class="link-btn" href="https://facebook.com" title="Facebook">
+                <img src="assets/images/facebook.png" alt="Facebook" class="icon" />
                 <span>Facebook</span>
+            </a>
+            <a class="link-btn" href="https://www.tiktok.com/@solarianearl" title="TikTok: solarianearl (Arthur)">
+                <img src="assets/images/tiktok.png" alt="TikTok" class="icon" />
+                <span>TikTok: solarianearl (Arthur)</span>
             </a>
         </div>
     </div>
     <script src="assets/js/snowfall.js"></script>
 </body>
-</html>
+</html
