Add Ken Clark TikTok link to Linktree
Added a new prominent TikTok link for @Kentoclark (Ken Clark) that follows the same styling as other social media links

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
                 <img src="assets/images/tiktok.png" alt="TikTok" class="icon" />
                 <span>TikTok: solarianearl (Arthur)</span>
             </a>
+            <a class="link-btn" href="https://www.tiktok.com/@kentoclark" title="TikTok: @Kentoclark (Ken Clark)">
+                <img src="assets/images/tiktok.png" alt="TikTok" class="icon" />
+                <span>TikTok: @Kentoclark (Ken Clark)</span>
+            </a>
         </div>
     </div>
     <script src="assets/js/snowfall.js"></script>
 </body>
-</html
+</html>
