Add YouTube link for @Game4Digital

--- a/index.html
+++ b/index.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+
+
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <title>Linktree Clone</title>
-</head>
-<body>
+
     <div class="container">
         <div class="profile-section">
-            <img src="assets/images/logo.png" alt="Profile" class="logo" />
+            <img alt="Profile" class="logo" src="assets/images/logo.png" />
             <h1>Your Name</h1>
             <p>Welcome to my Linktree clone</p>
         </div>
         <div class="links-section">
             <a class="link-btn" href="https://linkedin.com" title="LinkedIn">
-                <img src="assets/images/linkedin.png" alt="LinkedIn" class="icon" />
-                <span>LinkedIn</span>
+                <img alt="LinkedIn" class="icon" src="assets/images/linkedin.png" />
+                LinkedIn
             </a>
             <a class="link-btn" href="https://github.com" title="GitHub">
-                <img src="assets/images/github.png" alt="GitHub" class="icon" />
-                <span>GitHub</span>
+                <img alt="GitHub" class="icon" src="assets/images/github.png" />
+                GitHub
             </a>
             <a class="link-btn" href="https://instagram.com" title="Instagram">
-                <img src="assets/images/instagram.png" alt="Instagram" class="icon" />
-                <span>Instagram</span>
+                <img alt="Instagram" class="icon" src="assets/images/instagram.png" />
+                Instagram
             </a>
             <a class="link-btn" href="https://facebook.com" title="Facebook">
-                <img src="assets/images/facebook.png" alt="Facebook" class="icon" />
-                <span>Facebook</span>
+                <img alt="Facebook" class="icon" src="assets/images/facebook.png" />
+                Facebook
             </a>
             <a class="link-btn" href="https://www.tiktok.com/@solarianearl" title="TikTok: solarianearl (Arthur)">
-                <img src="assets/images/tiktok.png" alt="TikTok" class="icon" />
-                <span>TikTok: solarianearl (Arthur)</span>
+                <img alt="TikTok" class="icon" src="assets/images/tiktok.png" />
+                TikTok: solarianearl (Arthur)
             </a>
             <a class="link-btn" href="https://www.tiktok.com/@kentoclark" title="TikTok: @Kentoclark (Ken Clark)">
-                <img src="assets/images/tiktok.png" alt="TikTok" class="icon" />
-                <span>TikTok: @Kentoclark (Ken Clark)</span>
+                <img alt="TikTok" class="icon" src="assets/images/tiktok.png" />
+                TikTok: @Kentoclark (Ken Clark)
+            </a>
+            <a class="link-btn" href="https://www.youtube.com/@Game4Digital" title="YouTube: @Game4Digital">
+                <img alt="YouTube" class="icon" src="assets/images/youtube.png" />
+                YouTube: @Game4Digital
             </a>
         </div>
     </div>
     <script src="assets/js/snowfall.js"></script>
-</body>
-</html>
