--- a/index.html
+++ b/index.html
@@ -2,51 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta name="description" content="Tales of Solaria - A Fantasy Adventure Nexus" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Arthur's Profile - Connect with me on social media" />
     <meta name="theme-color" content="#2c1810" />
-    <link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <title>Tales of Solaria</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Arthur - Profile</title>
+    <style>
+        body {
+            background: url('assets/images/Warrior-of-the-Radiant-Skies.jpg') no-repeat center center fixed;
+            background-size: cover;
+            filter: blur(0px);
+        }
+        
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('assets/images/Warrior-of-the-Radiant-Skies.jpg') no-repeat center center fixed;
+            background-size: cover;
+            filter: blur(3px);
+            z-index: -1;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <div class="profile-section">
-            <img alt="Profile" class="logo" src="assets/images/logo.png" />
-            <h1>Your Name</h1>
-            <p>Welcome to Tales of Solaria - A Fantasy Adventure Nexus</p>
+            <img src="assets/images/Warrior-of-the-Radiant-Skies.jpg" alt="Profile" class="logo" />
+            <h1>Arthur</h1>
+            <p>Welcome to my profile</p>
         </div>
         <div class="links-section">
-            <a class="link-btn" href="https://linkedin.com" title="LinkedIn">
-                <img alt="LinkedIn" class="icon" src="assets/images/linkedin.png" />
-                LinkedIn
-            </a>
-            <a class="link-btn" href="https://github.com" title="GitHub">
-                <img alt="GitHub" class="icon" src="assets/images/github.png" />
-                GitHub
-            </a>
-            <a class="link-btn" href="https://instagram.com" title="Instagram">
-                <img alt="Instagram" class="icon" src="assets/images/instagram.png" />
-                Instagram
-            </a>
-            <a class="link-btn" href="https://facebook.com" title="Facebook">
-                <img alt="Facebook" class="icon" src="assets/images/facebook.png" />
-                Facebook
-            </a>
             <a class="link-btn" href="https://www.tiktok.com/@solarianearl" title="TikTok: solarianearl (Arthur)">
-                <img alt="TikTok" class="icon" src="assets/images/tiktok.png" />
+                <img src="assets/images/tiktok.png" alt="TikTok" class="icon" />
                 TikTok: solarianearl (Arthur)
             </a>
             <a class="link-btn" href="https://www.tiktok.com/@kentoclark" title="TikTok: @Kentoclark (Ken Clark)">
-                <img alt="TikTok" class="icon" src="assets/images/tiktok.png" />
+                <img src="assets/images/tiktok.png" alt="TikTok" class="icon" />
                 TikTok: @Kentoclark (Ken Clark)
             </a>
             <a class="link-btn" href="https://www.youtube.com/@Game4Digital" title="YouTube: @Game4Digital">
-                <img alt="YouTube" class="icon" src="assets/images/youtube.png" />
+                <img src="assets/images/youtube.png" alt="YouTube" class="icon" />
                 YouTube: @Game4Digital
             </a>
         </div>
     </div>
-    <script src="assets/js/snowfall.js"></script>
 </body>
 </html>
