--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Arthur's Profile - Connect with me on social media" />
-    <meta name="theme-color" content="#2c1810" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Arthur's Profile - Connect with me on social media">
+    <meta name="theme-color" content="#2c1810">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Arthur - Profile</title>
     <style>
         body {
@@ -38,15 +38,15 @@
         </div>
         <div class="links-section">
             <a class="link-btn" href="https://www.tiktok.com/@solarianearl" title="TikTok: solarianearl (Arthur)">
-                <img alt="TikTok" class="icon" />
+                <img src="assets/images/tiktok.png" alt="TikTok" class="icon" />
                 TikTok: solarianearl (Arthur)
             </a>
             <a class="link-btn" href="https://www.tiktok.com/@kentoclark" title="TikTok: @Kentoclark (Ken Clark)">
-                <img alt="TikTok" class="icon" />
+                <img src="assets/images/tiktok.png" alt="TikTok" class="icon" />
                 TikTok: @Kentoclark (Ken Clark)
             </a>
             <a class="link-btn" href="https://www.youtube.com/@Game4Digital" title="YouTube: @Game4Digital">
-                <img alt="YouTube" class="icon" />
+                <img src="assets/images/youtube.png" alt="YouTube" class="icon" />
                 YouTube: @Game4Digital
             </a>
         </div>
